force-app/main/default/objects/API_Agreement__c/API_Agreement__c.object-meta.xml
<CustomObject>
    <description>API Agreeement</description>
    <label>API Agreement</label>
    <nameField>
        <label>API Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>