force-app/main/default/objects/API_Agreement__c/fields/Confins_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Confins_Application_Id__c</fullName>
    <label>Confins Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>