force-app/main/default/objects/API_Agreement__c/fields/Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount__c</fullName>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>