force-app/main/default/objects/API_Agreement__c/fields/Outstanding_AR__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_AR__c</fullName>
    <label>Outstanding AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>